force-app/main/default/objects/AFF_Features_Control_Config__mdt/AFF_Features_Control_Config__mdt.object-meta.xml
<CustomObject>
    <description>AFF. Custom Metadata to control conditional enablement of the various features. We consider some distinguish part of the functionality like a feature. Every feature should have a unique name. For example. CREATE_LEADS_ON_ACCOUNT_UPSERT is a feature. All logic related to the leads inside the Account trigger can be enabled/disabled using this custom metadata</description>
    <label>AFF Features Control Config</label>
    <pluralLabel>AFF Features Control Configs</pluralLabel>
</CustomObject>