force-app/main/default/objects/AFF_Features_Control_Config__mdt/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Context which can be used to specialize feature. Most of the time empty</description>
    <label>Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>