force-app/main/default/objects/AFF_Features_Control_Config__mdt/fields/FeatureDescription__c.field-meta.xml
<CustomField>
    <fullName>FeatureDescription__c</fullName>
    <description>Description of the feature</description>
    <label>Feature Description</label>
    <type>TextArea</type>
</CustomField>