force-app/main/default/objects/AFF_Features_Control_Config__mdt/fields/IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if feature is enabled and false otherwise</description>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>